# Game_Life

./: CMakeLists.txt  Consts.h  Map.cpp  main.cpp
inc/: Map.h  Screen.h
src/: Screen.cpp  main.cpp
